Finished issues pages with pagination

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
     name="description"
-    content="GitRepos tracker is a webapp to track your github repositories and watch the issues."
+    content="GitRepos tracker is a webapp to track your github repositories and watch the open issues."
     />
     <title>GitRepos Tracker</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
