--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     name="description"
     content="GitRepos tracker is a webapp to track your github repositories and watch the open issues."
     />
-    <title>GitRepos Tracker</title>
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    <title>GitRepos Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
